# RUST_TASK_RECRUITMENT_SOLUTION

./: Cargo.toml  Dockerfile  README.md  entrypoint.sh
.circleci/: config.yml
src/: lib.rs  main.rs
tests/: currency_list_request_test.rs  exchange_currency_request_test.rs  lib_test.rs  ratios_list_request_test.rs
