workspace = { members = ["docs"] }
[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
const_format = "0.2.32"
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.11.26", features = ["json"] }
serde_json = "1.0.114"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
